force-app/main/default/objects/MobileEnforcedPolicyObject__c/MobileEnforcedPolicyObject__c.object-meta.xml
<CustomObject>
    <label>MobileEnforcedPolicyObject</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MobileEnforcedPolicyObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MobileEnforcedPolicyObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>