force-app/main/default/objects/MobileEnforcedPolicyObject__c/fields/EnforcedAction__c.field-meta.xml
<CustomField>
    <fullName>EnforcedAction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EnforcedAction</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>