force-app/main/default/objects/MobileEnforcedPolicyObject__c/fields/PolicyResultsText__c.field-meta.xml
<CustomField>
    <fullName>PolicyResultsText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PolicyResultsText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>