force-app/main/default/objects/MobileEnforcedPolicyObject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AppPackageIdentifier__c</columns>
    <columns>AppVersion__c</columns>
    <columns>DeviceIdentifier__c</columns>
    <columns>DeviceModel__c</columns>
    <columns>EnforcedAction__c</columns>
    <columns>OsName__c</columns>
    <columns>OsVersion__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>UserId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>